# TreemovBackend

./: .env  .gitignore  Makefile  main.py  pyproject.toml
app/api/: init_org.py  (+1 more)
services/crm_core/: .env-docker  Dockerfile  Makefile  conftest.py  docker-compose.yml  env  main.py  pyproject.toml
services/crm_core/app/: commands.py  constants.py  decorators.py  fields.py  filters.py  lifespan.py  manage.py  middleware.py
services/crm_core/app/api/: auth.py  init_org.py  profile.py  routers.py  user.py
services/crm_core/app/consume/: consumers.py  handlers.py  tasks.py
services/crm_core/app/core/: config.py  db.py
services/crm_core/app/depends/: __init__.py  agent.py  auth.py  profile.py  tenant.py  user.py
services/crm_core/app/models/: __init__.py  attendance.py  base.py  employee.py  grade.py  group.py  invite.py  lessons.py  organization.py  permission.py  profile.py  role.py  score_transaction.py  students.py  user.py
services/crm_core/app/repositories/: base.py  organization.py  tortoise.py  user.py
services/crm_core/app/schemas/: base.py  credentials.py  lesson.py  organization.py  user.py
services/crm_core/app/services/: __init__.py  auth.py  base.py  external.py  lesson.py  profile.py  role.py  user.py
services/crm_core/tests/: lesson_repo_test.py  lesson_servise_test.py
services/rabbitmq/: Dockerfile  docker-compose.yml  env  main.py  pyproject.toml
services/rabbitmq/src/: config.py
services/rabbitmq/tests/: test_rabbit.py
shared/: pyproject.toml
shared/src/libs/: auth.py  logger.py
shared/src/shared/: config.py  payload.py
(+113 files in other folders)
