[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.2.3"
dependencies = [
    "pydantic[email]",
    "kafka-python",
    "aio-pika>=9.4",
    "jose"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
