[project]
name = "rabbitmq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.8",
    "dotenv>=0.9.9",
    "faststream>=0.6.5",
    "httpx>=0.28.1",
    "pytest>=8.2.0",
    "pytest-asyncio>=1.3.0",
    "shared",
]


[tool.uv.sources]
shared = { workspace = true }

